--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1.0循环神经网络简介RNN.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1.0循环神经网络简介RNN.md
@@ -185,3 +185,6 @@ with tf.Session() as sess:
 3. [tf.unstack讲解](https://blog.csdn.net/qq_32806793/article/details/85223906)
 4. [numpy中矩阵乘法，星乘(*)和点乘(.dot)的区别](https://blog.csdn.net/like4501/article/details/79753346)
 5. [使用Tensorflow实现简单的RNN](https://www.jianshu.com/p/b38760250281)
+6. [循环神经网络(RNN, Recurrent Neural Networks)介绍](https://blog.csdn.net/heyongluoyao8/article/details/48636251)
+7. [循环神经网络（RNN）原理通俗解释](https://blog.csdn.net/qq_39422642/article/details/78676567)
+8. https://github.com/hzy46/Char-RNN-TensorFlow
