--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2.2LSTM参数个数计算.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2.2LSTM参数个数计算.md
@@ -1,27 +1,17 @@
 
 LSTM参数个数计算 - taoyafan的博客 - CSDN博客 https://blog.csdn.net/taoyafan/article/details/82803943
 
-今天看程序看到了LSTM，原理都懂，但是想看看参数的个数是怎么算出来的，先简单介绍下我的网络前两层：
+1. LSTM
+    1. （1）第一层是一个 embedding 层，输出是 100 维的。
+    2. （2）第二层是一个 LSTM 层，输出是 512 维的。
+    3. LSTM这一层的参数个数是 1255424 个，
+2. 设 LSTM 输入维度为 x_dim， 输出维度为 y_dim，那么参数个数 n 为：
+    1. n = 4 * ((x_dim + y_dim) * y_dim + y_dim)
+    2. 对应的网络结构就是：n = 4 * ((100 + 512) * 512 + 512) = 1255424
 
-（1）第一层是一个 embedding 层，输出是 100 维的。
+## 2. LSTM 的原理以及公式
 
-（2）第二层是一个 LSTM 层，输出是 512 维的。
-
-LSTM这一层的参数个数是 1255424 个，这一看还有整有零的，好奇怎么算出来的，于是百度搜了下，得到这么一个公式：
-
-设 LSTM 输入维度为 x_dim， 输出维度为 y_dim，那么参数个数 n 为：
-
-n = 4 * ((x_dim + y_dim) * y_dim + y_dim)
-对应我的网络结构就是：n = 4 * ((100 + 512) * 512 + 512) = 1255424
-
- 
-
-LSTM 的原理以及公式的又来可以参考这个链接https://www.cnblogs.com/wushaogui/p/9176617.html
-
-他计算过程都是对的，只不过他最后公式写错了，我这个公式是对的！
-
-
-## 2. h = np.tanh(np.dot(Wxh, x) + np.dot(Whh, h) + bh)
+h = np.tanh(np.dot(Wxh, x) + np.dot(Whh, h) + bh)
 
 ```py
 import numpy as np
@@ -61,3 +51,4 @@ h = np.tanh(np.dot(Wxh, x) + np.dot(Whh, h) + bh)
     3. https://github.com/subarnop/AMachineLearningWalkThrough
     4. https://download.csdn.net/download/zwxeye/10459112
 2. https://www.cnblogs.com/jermmyhsu/p/10020308.html
+3. https://www.cnblogs.com/wushaogui/p/9176617.html
