--- a/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
+++ b/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
@@ -51,7 +51,7 @@
         10. 可看出 卷积层的神经元是只与前一层的部分神经元节点相连，每一条相连的线对应一个权重 w 。
         11. ![图06.感受视野计算下一层神经元的值.png](图06.感受视野计算下一层神经元的值.png)
         12. 对下一层的所有神经元来说，它们从不同的位置去探测了上一层神经元的特征。
-    2. shared weights（共享权值）
+    2. shared weights（共享权值）权重共享
     3. 卷积核
         1. 一个感受视野带有一个卷积核，我们将 感受视野 中的权重 w 矩阵称为 卷积核 ；
         2. 将感受视野对输入的扫描间隔称为步长（stride）；
