--- a/program/python/04.tensorflow/09.神经网络算法基础/9.2实践1/04.TensorFlowGraph和TiniFlowGraph.md
+++ b/program/python/04.tensorflow/09.神经网络算法基础/9.2实践1/04.TensorFlowGraph和TiniFlowGraph.md
@@ -1,22 +1,22 @@
 
 
-1. ![图07.TensorflowGraph用法.png](图07.TensorflowGraph用法.png)
+1. ![图07.TensorflowGraph用法.png](cda/图07.TensorflowGraph用法.png)
     1. 比较Tensorflow tf.Graph
         1. g1.tf.Graph()
         2. g2.tf.Graph()
         3. g1, g2是两个不同的Graph对象
     2. g=tf.get_default_graph
         1. g是Tensorflow缺省产生的图，所有API都会把Tensor和Op加入这个缺省Graph中去
-2. ![图08.TensorflowGraph用法.png](图08.TensorflowGraph用法.png)
+2. ![图08.TensorflowGraph用法.png](cda/图08.TensorflowGraph用法.png)
     1. session=Session(graph)
     2. 如果不指定graph，Session采用缺省graph
-3. ![图09.TiniflowGraph.png](图09.TiniflowGraph.png)
+3. ![图09.TiniflowGraph.png](cda/图09.TiniflowGraph.png)
     1. 两种方式排序
         1. 前向
         2. 后向
             1. 孤立点，对最后的结果没有贡献，去除所有用不到的节点，减少运算时间
             2. 先看E的输出的度数为0
-4. ![图10.TiniflowGraph创建.png](图10.TiniflowGraph创建.png)
+4. ![图10.TiniflowGraph创建.png](cda/图10.TiniflowGraph创建.png)
     1. 创建Graph的方法
     2. g1 = Graph(feed_dict={a:a_, b:b_}, name='name')
         1. Note: default_graph is overwritten when g1 is created
