--- a/program/python/00.核心/time/4.python中时间、日期、时间戳的转换.md
+++ b/program/python/00.核心/time/4.python中时间、日期、时间戳的转换.md
@@ -37,6 +37,8 @@ timeStamp = 1381419600
 timeArray = time.localtime(timeStamp)
 otherStyleTime = time.strftime("%Y--%m--%d %H:%M:%S", timeArray)
 print otherStyleTime   # 2013--10--10 23:40:00
+
+time.strftime("%Y-%m-%d %H:%M:%S", time.localtime(1381419600))
 # 使用datetime
 timeStamp = 1381419600
 dateArray = datetime.datetime.utcfromtimestamp(timeStamp)
