--- a/program/python/00.核心/03.变量和数据类型/03.集合（set）类型的操作.md
+++ b/program/python/00.核心/03.变量和数据类型/03.集合（set）类型的操作.md
@@ -3,11 +3,72 @@ https://blog.csdn.net/business122/article/details/7541486
 python的set和其他语言类似, 是一个无序不重复元素集, 基本功能包括关系测试和消除重复元素. 集合对象还支持union(联合), intersection(交), difference(差)和sysmmetric difference(对称差集)等数学运算.
  
 sets 支持 x in set, len(set),和 for x in set。作为一个无序的集合，sets不记录元素位置或者插入点。因此，sets不支持 indexing, slicing, 或其它类序列（sequence-like）的操作。
+
+
+# 1. Python之 遍历set
+由于 set 也是一个集合，所以，遍历 set 和遍历 list 类似，都可以通过 for 循环实现。
+
+直接使用 for 循环可以遍历 set 的元素：
+
+>>> s = set(['Adam', 'Lisa', 'Bart'])
+>>> for name in s:
+...     print name
+... 
+Lisa
+Adam
+Bart
+注意: 观察 for 循环在遍历set时，元素的顺序和list的顺序很可能是不同的，而且不同的机器上运行的结果也可能不同。
+
+任务
+请用 for 循环遍历如下的set，打印出 name: score 来。
+
+s = set([('Adam', 95), ('Lisa', 85), ('Bart', 59)])
  
+注意到set的元素是tuple，因此 for 循环的变量被依次赋值为tuple。
+
+参考代码:
+
+s = set([('Adam', 95), ('Lisa', 85), ('Bart', 59)])
+for x in s:
+    print x[0] + ':', x[1]
+
+# 2. 增删改查
+
  
- 
-下面来点简单的小例子说明把。
- 
+```py
+# 基本操作：
+t.add('x')            # 添加一项
+s.update([10,37,42])  # 在s中添加多项
+# 使用remove()可以删除一项：
+t.remove('H')
+len(s)
+# set 的长度
+x in s
+# 测试 x 是否是 s 的成员
+x not in s
+# 测试 x 是否不是 s 的成员
+s.issubset(t)
+s <= t
+#测试是否 s 中的每一个元素都在 t 中
+s.issuperset(t)
+s >= t
+#测试是否 t 中的每一个元素都在 s 中
+s.union(t)
+s | t
+#返回一个新的 set 包含 s 和 t 中的每一个元素
+s.intersection(t)
+s & t
+#返回一个新的 set 包含 s 和 t 中的公共元素
+s.difference(t)
+s - t
+#返回一个新的 set 包含 s 中有但是 t 中没有的元素
+s.symmetric_difference(t)
+s ^ t
+#返回一个新的 set 包含 s 和 t 中不重复的元素
+s.copy()
+#返回 set “s”的一个浅复制
+```
+
 >>> x = set('spam')
 >>> y = set(['h','a','m'])
 >>> x, y
@@ -56,42 +117,7 @@ a = t | s          # t 和 s的并集
 b = t & s          # t 和 s的交集
 c = t – s          # 求差集（项在t中，但不在s中）
 d = t ^ s          # 对称差集（项在t或s中，但不会同时出现在二者中）
- 
-```py
-# 基本操作：
-t.add('x')            # 添加一项
-s.update([10,37,42])  # 在s中添加多项
-# 使用remove()可以删除一项：
-t.remove('H')
-len(s)
-# set 的长度
-x in s
-# 测试 x 是否是 s 的成员
-x not in s
-# 测试 x 是否不是 s 的成员
-s.issubset(t)
-s <= t
-测试是否 s 中的每一个元素都在 t 中
-s.issuperset(t)
-s >= t
-测试是否 t 中的每一个元素都在 s 中
-s.union(t)
-s | t
-返回一个新的 set 包含 s 和 t 中的每一个元素
-s.intersection(t)
-s & t
-返回一个新的 set 包含 s 和 t 中的公共元素
- 
-s.difference(t)
-s - t
-返回一个新的 set 包含 s 中有但是 t 中没有的元素
- 
-s.symmetric_difference(t)
-s ^ t
-返回一个新的 set 包含 s 和 t 中不重复的元素
- 
-s.copy()
-返回 set “s”的一个浅复制
+
  
  
 请注意：union(), intersection(), difference() 和 symmetric_difference() 的非运算符（non-operator，就是形如 s.union()这样的）版本将会接受任何 iterable 作为参数。相反，它们的运算符版本（operator based counterparts）要求参数必须是 sets。这样可以避免潜在的错误，如：为了更可读而使用 set('abc') & 'cbs' 来替代 set('abc').intersection('cbs')。从 2.3.1 版本中做的更改：以前所有参数都必须是 sets。
