--- a/program/python/04.tensorflow/11.文本分析/03.python-TF-IDF/04.fit_transform()和transform()的区别.md
+++ b/program/python/04.tensorflow/11.文本分析/03.python-TF-IDF/04.fit_transform()和transform()的区别.md
@@ -15,24 +15,110 @@ X_train = ss.fit_transform(X_train)
 X_test = ss.transform(X_test)
 ```
 
-两个函数的API以及参数含义：
-1、fit_transform()函数
-即fit_transform()的作用就是先拟合数据，然后转化它将其转化为标准形式
+函数的API以及参数含义：
+1. fit(X[,y])：计算待标准化数据的均值和方差等参数。
+    1. fit是一个适配的过程，过程都是定死的，最后只是得到了一个统一的转换的规则模型。
+    2. fit_transform()的功能就是对数据先进行拟合处理，然后再将其进行标准化，可以看做是fit和transform的结合，
+    3. 如果训练阶段使用fit_transform，则在测试阶段只需要对测试样本进行transform就行了。
+2. fit_transform(X[,y])：对数据先进行拟合，然后标准化。  
+    1. transform()的功能是对数据进行标准化。是将数据进行转换，比如数据的归一化和标准化，将测试数据按照训练数据同样的模型进行转换，得到特征向量。
+    2. 即fit_transform()的作用就是先拟合数据，然后转化它将其转化为标准形式 
+3. transform(X[, y, copy])：对数据进行标准化，与fit_transform(X[,y])的结果是一样的。
+    1. tranform()的作用是通过找中心和缩放等实现标准化
 
-2、transform()函数
-
-即tranform()的作用是通过找中心和缩放等实现标准化
-
-
-
-前者多了一个fit数据的步骤，那为什么在标准化数据的时候不使用fit_transform()函数呢？
-
-原因如下：
+# 2. 为什么在标准化数据的时候不使用fit_transform()函数呢？
 
 为了数据归一化（使特征数据方差为1，均值为0），我们需要计算特征数据的均值μ和方差σ^2，再使用下面的公式进行归一化：
 
-我们在训练集上调用fit_transform()，其实找到了均值μ和方差σ^2，即我们已经找到了转换规则，我们把这个规则利用在训练集上，同样，我们可以直接将其运用到测试集上（甚至交叉验证集），所以在测试集上的处理，我们只需要标准化数据而不需要再次拟合数据。用一幅图展示如下：
+我们在训练集上调用fit_transform()，其实找到了均值μ和方差σ^2，即我们已经找到了转换规则，我们把这个规则利用在训练集上，同样，我们可以直接将其运用到测试集上（甚至交叉验证集），所以在测试集上的处理，我们只需要标准化数据而不需要再次拟合数据。
+
+# 3. StandardScaler
+
+https://blog.csdn.net/u012609509/article/details/78554709
+
+作用：去均值和方差归一化。且是针对每一个特征维度来做的，而不是针对样本。 
+
+```py
+# coding=utf-8
+# 统计训练集的 mean 和　std 信息
+from sklearn.preprocessing import StandardScaler
+import numpy as np
 
 
+np.random.seed(123)
+print('use sklearn')
+# 注：shape of data: [n_samples, n_features]
+data = np.random.randn(10, 4)
+scaler = StandardScaler()
+scaler.fit(data)
+trans_data = scaler.transform(data)
+print('original data: ')
+print (data)
+print('transformed data: ')
+print (trans_data)
+print('scaler info: scaler.mean_: {}, scaler.var_: {}'.format(scaler.mean_, scaler.var_))
+print('\n')
 
-（图片来源：点击打开链接）
+print('use numpy by self')
+mean = np.mean(data, axis=0)
+std = np.std(data, axis=0)
+var = std * std
+print('mean: {}, std: {}, var: {}'.format(mean, std, var))
+# numpy 的广播功能
+another_trans_data = data - mean
+# 注：是除以标准差
+another_trans_data = another_trans_data / std
+print('another_trans_data: ')
+print (another_trans_data)
+```
+
+# 3. StandardScalers数据预处理 - 木子木泗的博客 - CSDN博客 https://blog.csdn.net/u010758410/article/details/78158781
+
+标准化
+　　我们知道，在训练模型的时候，要输入features,即因子，也叫特征。对于同一个特征，不同的样本中的取值可能会相差非常大，一些异常小或异常大的数据会误导模型的正确训练；另外，如果数据的分布很分散也会影响训练结果。以上两种方式都体现在方差会非常大。此时，我们可以将特征中的值进行标准差标准化，即转换为均值为0，方差为1的正态分布。所以在训练模型之前，一定要对特征的数据分布进行探索，并考虑是否有必要将数据进行标准化。 
+　　 
+　　标准化的方式一： 
+　　使用preprocessing.scale()
+
+```py
+from sklearn import preprocessing   
+import numpy as np    
+X = np.array([[1., -1., 2.], [2., 0., 0.], [0., 1., -1.]])    
+X_scaled = preprocessing.scale(X)   
+#output :X_scaled = [[ 0.         -1.22474487  1.33630621]  
+                 [ 1.22474487  0.         -0.26726124]  
+                 [-1.22474487  1.22474487 -1.06904497]]  
+＃scaled之后的数据零均值，单位方差  
+X_scaled.mean(axis=0)  # column mean: array([ 0.,  0.,  0.])    
+X_scaled.std(axis=0)  #column standard deviation: array([ 1.,  1.,  1.])  
+```
+
+　　标准化的方式二： 
+　　使用StandardScaler，fit()，transform()；或者fit_transform()
+
+```py
+from sklearn.preprocessing import StandardScaler
+import numpy as np
+
+X = np.array([[1., -1., 2.],
+              [2., 0., 0.],
+              [0., 1., -1.]])
+ss = StandardScaler()
+ss2 = StandardScaler()
+print(X)
+scaler = ss.fit(X) # <class 'sklearn.preprocessing.data.StandardScaler'>
+# print(ss is scaler) # True
+print(scaler)
+print(scaler.mean_)
+
+transform = scaler.transform(X)
+print(transform)
+# ss_transform = ss.transform(X) # 同上，完全一样
+# print(ss_transform)
+
+# fit_transform = ss.fit_transform(X) # 重新学习了一遍，当然结果是一样的
+# print(fit_transform)
+
+# ss2_transform = ss2.transform(X) # 没有通过fit得到元数据的均值和方差，无法进行0-1标准化。直接使用是错误的
+# print(ss2_transform)
+```
