--- a/program/01.java/07.dubbo/01.基础知识/02.环境搭建.md
+++ b/program/01.java/07.dubbo/01.基础知识/02.环境搭建.md
@@ -122,6 +122,14 @@ zookeeper://10.20.153.10:2181?client=curator
     <artifactId>curator-framework</artifactId>
     <version>1.1.10</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.curator/curator-x-discovery -->
+<dependency>
+    <groupId>org.apache.curator</groupId>
+    <artifactId>curator-x-discovery</artifactId>
+    <version>4.0.1</version>
+</dependency>
+<!-- gradle -->
+"org.apache.curator:curator-x-discovery:${curator_x_discovery}",
 ```
 
 # 4. zookeeper 配置
