--- a/program/01.java/07.dubbo/02.dubbo配置/22.dubbo点到点直连配置.md
+++ b/program/01.java/07.dubbo/02.dubbo配置/22.dubbo点到点直连配置.md
@@ -1,8 +1,9 @@
 
 dubbo(provider,consumer)点到点直连配置 - CSDN博客 http://blog.csdn.net/nauwzj/article/details/18708033
 
-1.服务端接口配置（providr样例）applicationContext-dubbo-smk.xml：
+# 1.服务端接口配置（providr样例）applicationContext-dubbo-smk.xml：
 
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns:dubbo="http://code.alibabatech.com/schema/dubbo"
@@ -16,9 +17,11 @@ dubbo(provider,consumer)点到点直连配置 - CSDN博客 http://blog.csdn.net/
      <dubbo:service interface="com.xxx.SmkService" ref="smkService"  version="1.0"/>
 
 </beans>
+```
 
-2.服务端注册配置：
+# 2. 服务端注册配置：
 
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dubbo="http://code.alibabatech.com/schema/dubbo"
@@ -39,9 +42,11 @@ dubbo(provider,consumer)点到点直连配置 - CSDN博客 http://blog.csdn.net/
 <!--   <dubbo:service interface="com.xxDownloadService" version="1.0" ref="downloadService" />
  <dubbo:service interface="com.xx.UploadService" version="1.0" ref="uploadService" />-->
 </beans>
+```
 
-3.dubbo客户端配置(consumer）
+# 3. dubbo客户端配置(consumer）
 
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns:dubbo="http://code.alibabatech.com/schema/dubbo"
@@ -76,3 +81,4 @@ dubbo(provider,consumer)点到点直连配置 - CSDN博客 http://blog.csdn.net/
         url="dubbo://xx:20880/com.xx.SmkService"
         version="1.0" />   
 </beans>
+```
