--- a/program/02.python/00.核心/sys/01.命令行参数.md
+++ b/program/02.python/00.核心/sys/01.命令行参数.md
@@ -3,6 +3,9 @@ http://www.runoob.com/python/python-command-line-arguments.html
 
 
 Python 提供了 getopt 模块来获取命令行参数。
+
+# 1. sys.argv
+
 $ python test.py arg1 arg2 arg3
 Python 中也可以所用 sys 的 sys.argv 来获取命令行参数：
 sys.argv 是命令行参数列表。
@@ -24,7 +27,7 @@ $ python test.py arg1 arg2 arg3
 参数个数为: 4 个参数。
 参数列表: ['test.py', 'arg1', 'arg2', 'arg3']
 
-## getopt模块
+# 2. getopt模块
 getopt模块是专门处理命令行参数的模块，用于获取命令行选项和参数，也就是sys.argv。命令行选项使得程序的参数更加灵活。支持短选项模式（-）和长选项模式（--）。
 该模块提供了两个方法及一个异常处理来解析命令行参数。
 getopt.getopt 方法
@@ -71,10 +74,45 @@ def main(argv):
 if __name__ == "__main__":
    main(sys.argv[1:])
 ```
-执行以上代码，输出结果为：
-$ python test.py -h
-usage: test.py -i <inputfile> -o <outputfile>
 
-$ python test.py -i inputfile -o outputfile
-输入的文件为： inputfile
-输出的文件为： outputfile
+```py
+import sys, getopt
+
+opts, args = getopt.getopt(sys.argv[1:], "hi:o:")
+input_file=""
+output_file=""
+for op, value in opts:
+    if op == "-i":
+        input_file = value
+    elif op == "-o":
+        output_file = value
+    elif op == "-h":
+        usage()
+        sys.exit()
+```
+
+# 2.2 代码解释：
+1. 代码解释
+   1. sys.argv[1:]为要处理的参数列表，sys.argv[0]为脚本名，所以用sys.argv[1:]过滤掉脚本名。
+   2. "hi:o:": 当一个选项只是表示开关状态时，即后面不带附加参数时，在分析串中写入选项字符。当选项后面是带一个附加参数时，在分析串中写入选项字符同时后面加一个":"号。所以"hi:o:"就表示"h"是一个开关选项；"i:"和"o:"则表示后面应该带一个参数。
+   3. 调用getopt函数。函数返回两个列表：opts和args。opts为分析出的格式信息。args为不属于格式信息的剩余的命令行参数。opts是一个两元组的列表。每个元素为：(选项串,附加参数)。如果没有附加参数则为空串''。
+2. getopt函数的第三个参数[, long_options]为可选的长选项参数，上面例子中的都为短选项(如-i -o)
+3. 长选项格式举例:
+   1. --version
+   2. --file=error.txt
+4. 让一个脚本同时支持短选项和长选项
+   1. getopt.getopt(sys.argv[1:], "hi:o:", ["version", "file="])
+
+```sh
+# 执行以上代码，输出结果为：
+$ python test.py -h
+# usage: test.py -i <inputfile> -o <outputfile>
+python test.py -i inputfile -o outputfile
+# 输入的文件为： inputfile
+# 输出的文件为： outputfile
+
+# 1.通过-i -o选项来区别参数是输入文件还是输出文件.
+>>> python convert.py -i inputfile -o outputfile
+# 2.当不知道convert.py需要哪些参数时，用-h打印出帮助信息
+>>> python convert.py -h
+```
