--- a/program/02.python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.0MNIST数据处理.md
+++ b/program/02.python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.0MNIST数据处理.md
@@ -24,20 +24,23 @@ print ("Example training data label: ", mnist.train.labels[0])
 
 ## 4. input_data.read_data_sets
 
-* input_data.read_data_sets函数会自动将MNIST数据集划分为train、validation和test三个数据集
-    * train有55000张，validation有5000张，这两个集合组成MNIST本身提供的训练数据集
-    * test有10000张
-* 处理后的每一张图片是一个长度为784(28*28=784)的一维数组
-* 像素矩阵中元素的取值范围为[0,1]，0表示白色背景，1表示黑色背景
-* 特征向量
-    * [矩阵、向量、行列式、特征值与特征向量](https://blog.csdn.net/a727911438/article/details/77531973)
+1. input_data.read_data_sets函数会自动将MNIST数据集划分为train、validation和test三个数据集
+    1. train有55000张，validation有5000张，这两个集合组成MNIST本身提供的训练数据集
+    2. test有10000张
+2. 处理后的每一张图片是一个长度为784(28*28=784)的一维数组
+3. 像素矩阵中元素的取值范围为[0,1]，0表示白色背景(background)，1表示黑色前景(foreground)
+4. 特征向量
+    1. 设 A 是 n 阶矩阵，如果存在一个数 λ 及非零的 n 维列向量 α ，使得 Aα=λα 成立，则称 λ 是矩阵 A 的一个`特征值`，称非零向量 α 是矩阵 A 属于特征值 λ 的一个`特征向量`。
+    2. [矩阵、向量、行列式、特征值与特征向量](https://blog.csdn.net/a727911438/article/details/77531973)
+    3. ![图01.特征向量.png](图01.特征向量.png)
 
 ## 5. mnist.train.next_batch()
 
-* 从所有的训练数据中读取一小部分作为一个训练batch
+1. 从所有的训练数据中读取一小部分作为一个训练batch
 
 ```py
 batch_size = 100
+# 从train的集合中选取batch_size个训练数据
 xs, ys = mnist.train.next_batch(batch_size)
 print "X shape: ", xs.shape
 print "Y shape: ", ys.shape
