--- a/program/02.python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.1手工下载mnist数据集.md
+++ b/program/02.python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.1手工下载mnist数据集.md
@@ -2,20 +2,19 @@
 
 https://blog.csdn.net/Sun_White_Boy/article/details/79293989
 
+```py
+# 1. 先在你正在写的项目下创建文件夹MNIST_data
+# 2. Yann LeCun's website。从官网下载四个压缩包，不用解压直接放入文件夹中
 from tensorflow.examples.tutorials.mnist import input_data
 mnist = input_data.read_data_sets("MNIST_data/", one_hot=True)
-
-这是官方文档给出的导入代码，但我同很多人有一样的问题，运行程序的时候发现并没有讲MNIST数据集导入，so，在网上找了很多资料，最后找到了解决方法。
-
-先在你正在写的项目下创建文件夹MNIST_data
-Yann LeCun's website。从官网下载四个压缩包，不用解压直接放入文件夹中
-成功导入数据集
+```
+# 下载地址
 
 1. http://yann.lecun.com/exdb/mnist/
-    1. http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz
-    2. http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz
-    3. http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz
-    4. http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz
+    1. http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz  (训练数据图片)
+    2. http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz  (训练数据答案)
+    3. http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz   (测试数据图片)
+    4. http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz   (测试数据答案)
 2. https://github.com/reymont/Pattern-Recognition-A1 (fork)
     1. https://github.com/reymont/Pattern-Recognition-A1/blob/master/code/MNIST_Data/t10k-images-idx3-ubyte.gz
     2. https://github.com/reymont/Pattern-Recognition-A1/blob/master/code/MNIST_Data/t10k-labels-idx1-ubyte.gz
