--- a/program/02.python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.3卷积神经网络常用结构/6.3.1卷积层/1.卷积层.md
+++ b/program/02.python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.3卷积神经网络常用结构/6.3.1卷积层/1.卷积层.md
@@ -1,8 +1,8 @@
 
 ## 1. 过滤器 filter
 
-1. 过滤器
-    1. 过滤器将当前层神经网络上的一个子节点矩阵转化为下一层神经网络上的一个单位节点矩阵
+1. 过滤器filter或内核kernel
+    1. `过滤器`将当前层神经网络上的一个子节点矩阵转化为下一层神经网络上的一个单位节点矩阵
     2. `单位节点矩阵`指的是一个长和宽都为1，但深度不限的节点矩阵
 
 ## 2. 过滤器结构
