--- a/devops/03.groovy/字符串/01.三单引号字符串.md
+++ b/devops/03.groovy/字符串/01.三单引号字符串.md
@@ -1,8 +1,30 @@
 
 
+# 1. 三双引号 
+```groovy
+def name = 'Groovy'
+def template = """
+    Dear Mr ${name},
+
+    You're the winner of the lottery!
+
+    Yours sincerly,
+
+    Dave
+"""
+println template
+assert template.toString().contains('Groovy')
+
+// 执行结果为：
+//     Dear Mr Groovy,
+//     You're the winner of the lottery!
+//     Yours sincerly,
+//     Dave
+```
+
+# 2. 三单引号字符串
 
 
-三单引号字符串
 
 三单引号字符串是一列被三个单引号包围的字符，是普通的java.lang.String。不支持插值。
 
@@ -39,3 +61,4 @@ assert str.size() == 11
 ## 参考
 
 1. https://blog.csdn.net/dora_310/article/details/52895835
+2. [Groovy入门](https://blog.51cto.com/damon188/2148647?source=dra)
