--- a/program/02.python/04.tensorflow/03.神经网络/3.3多维数组的运算/3.2激活函数.md
+++ b/program/02.python/04.tensorflow/03.神经网络/3.3多维数组的运算/3.2激活函数.md
@@ -53,7 +53,24 @@ plt.show()
 
 # 6. 非线性函数
 
-jiay
+1. 非线性函数
+    1. 阶跃函数和sigmoid函数均为非线性函数
+    2. 输出值是输入值的常数倍的函数称为线性函数（用数学式表示为h(x) = cx。 c为常数）
+    3. 考虑把线性函数 h(x) = cx 作为激活函数
+        1. 把y(x) = h(h(h(x)))的运算对应3层神经网络
+        2. 这个运算会进行y(x) = c × c × c × x的乘法运算，即没有隐藏层的神经网络
+
+# 7. ReLU函数
+
+![图3.9ReLU函数.png](图3.9ReLU函数.png)
+
+1. ReLU(Rectified Linear Unit)函数
+
+```py
+def relu(x):
+    return np.maximum(0, x)
+```
+
 
 # 参考
 
