--- a/devops/01.git/03.分支/2.git比较两个分支的文件的差异.md
+++ b/devops/01.git/03.分支/2.git比较两个分支的文件的差异.md
@@ -2,8 +2,10 @@
 
 
 git diff branch1 branch2 --stat            //显示出所有有差异的文件列表
+git diff branch1 branch2 --stat 文件名(带路径)     //显示指定文件的详细差异
 git diff branch1 branch2 文件名(带路径)     //显示指定文件的详细差异
 git diff branch1 branch2                   //显示出所有有差异的文件的详细差异
+
 
 ## 参考
 
