--- a/program/02.python/04.tensorflow/03.神经网络/3.3多维数组的运算/3.4三层神经网络的实现.md
+++ b/program/02.python/04.tensorflow/03.神经网络/3.3多维数组的运算/3.4三层神经网络的实现.md
@@ -25,7 +25,28 @@ A1 = np.dot(X,W1) + B1
 # 结果： [0.3 0.7 1.1]
 ```
 
-2. ![图3.19第1层到第二层的信号传递.png](图3.19第1层到第二层的信号传递.png)
+2. 第1层中激活函数的计算过程
+![图3.18从输入层到第1层的信号传递.png](图3.18从输入层到第1层的信号传递.png)
+
+```py
+import numpy as np
+X = np.array([1.0, 0.5])
+W1 = np.array([[0.1,0.3,0.5], [0.2,0.4,0.6]])
+B1 = np.array([0.1,0.2,0.3])
+
+W1.shape    # (2,3)
+X.shape     # (2,)
+B1.shape    # (3,)
+
+A1 = np.dot(X,W1) + B1
+# 结果： [0.3 0.7 1.1]
+Z1 = sigmoid(A1)
+print(A1) # [0.3, 0.7, 1.1]
+print(Z1) # [0.57444252, 0.66818777, 0.75026011]
+```
+
+
+3. ![图3.19第1层到第二层的信号传递.png](图3.19第1层到第二层的信号传递.png)
 
 ```py
 W2 = np.array([[0.1, 0.4], [0.2, 0.5], [0.3, 0.6]])
@@ -36,6 +57,20 @@ print(B2.shape) # (2,)
 A2 = np.dot(Z1, W2) + B2
 Z2 = sigmoid(A2)
 ```
+
+4. ![图3.20从第2层到输出层的信号传递.png](图3.20从第2层到输出层的信号传递.png)
+
+```py
+def identity_function(x):
+    return x
+
+W3 = np.array([[0.1, 0.3], [0.2, 0.4]])
+B3 = np.array([0.1, 0.2])
+
+A3 = np.dot(Z2, W3) + B3
+Y = identity_function(A3) # 或者Y = A3
+```
+
 
 # 3. 代码实现小结
 
