--- a/devops/01.git/02.基础/2.log.md
+++ b/devops/01.git/02.基础/2.log.md
@@ -3,6 +3,7 @@
 ```sh
 git log
 ### -p，用来显示每次提交的内容差异。 你也可以加上 -2 来仅显示最近两次提交
+git log -p
 git log -p -2
 ### 如果你想看到每次提交的简略的统计信息，你可以使用 --stat 选项
 git log --stat
