--- a/program/02.python/04.tensorflow/03.神经网络入门/03神经网络/3.5输出层的设计.md
+++ b/program/02.python/04.tensorflow/03.神经网络入门/03神经网络/3.5输出层的设计.md
@@ -40,6 +40,43 @@ def softmax(a):
     return y
 ```
 
+# 2. softmax函数的溢出问题
+
+1. 溢出问题
+    1. 指数函数的值很容易变得非常大。对这些超大值之间进行除法运算，结果会出现`不确定`的情况
+    2. 在进行softmax指数函数运算时，加上（或者减去）某个常数并不会改变运算的结果
+
+```py
+a = np.array([1010, 1000, 990])
+np.exp(a) / np.sum(np.exp(a)) # softmax函数的运算 array([ nan, nan, nan]) # 没有被正确计算
+c = np.max(a) # 1010
+a - c # array([ 0, -10, -20])
+np.exp(a - c) / np.sum(np.exp(a - c)) # array([ 9.99954600e-01, 4.53978686e-05, 2.06106005e-09])
+
+def softmax(a):
+    c = np.max(a) 
+    exp_a = np.exp(a - c) # 溢出对策，减去输入信号中的最大值
+    sum_exp_a = np.sum(exp_a)
+    y = exp_a / sum_exp_a
+    return y
+```
+
+# 3. softmax函数的特征
+
+```py
+a = np.array([0.3, 2.9, 4.0])
+y = softmax(a)
+print(y) # [ 0.01821127 0.24519181 0.73659691]
+np.sum(y) # 1.0
+```
+
+1. softmax
+    1. softmax函数的输出是0.0到1.0之间的实数
+    2. softmax函数的输出值的总和是1
+    3. softmax函数的输出可以解释为`概率`
+
+# 4. 输出层的神经元数量
+
 # 参考
 
 1. [Markdown语法和LaTeX数学记号速查手册 ](http://www.domuse.com/markdown-and-latex-equation-handbook.html)
