--- a/devops/17.nginx/02.ABTestingGateway/01.ab分流策略.md
+++ b/devops/17.nginx/02.ABTestingGateway/01.ab分流策略.md
@@ -1,5 +1,16 @@
 https://github.com/CNSRE/ABTestingGateway/blob/master/doc/ab分流策略.md
 
+ab分流策略
+ab功能目前支持的分流策略有
+
+iprange: ip段分流
+uidrange: 用户uid段分流
+uidsuffix: uid尾数分流
+uidappoint: uid白名单分流
+可以灵活添加新的分流方式
+
+ab分流策略格式和样例
+
 ab分流策略格式
 ======================
 
