--- a/devops/06.kubernetes/05.资源管理/2.node/02.kubernetes node管理.md
+++ b/devops/06.kubernetes/05.资源管理/2.node/02.kubernetes node管理.md
@@ -29,16 +29,14 @@ kubectl patch node k8s-node1 -p '{"spec":"{"unschedulable":"true"}"}'
 
 kubectl cordon k8s-node1    #将k8s-node1节点设置为不可调度模式
 kubectl drain k8s-node1     #将当前运行在k8s-node1节点上的容器驱离
-
 kubectl uncordon k8s-node1  #执行完维护后，将节点重新加入调度
 
 # 4. 更新资源对象的label
 label作为用户可灵活定义的对象属性，在已创建的对象上仍然可以通过kubectl label命令对其进行增删改等操作
 
-给一个node添加一个label
+1. 给一个node添加一个label
 kubectl label node k8s-node1 role=backend
-删除label，只需要在命令行最后指定label的key名，并加一个减号即可：
-
+2. 删除label，只需要在命令行最后指定label的key名，并加一个减号即可：
 kubectl label node k8s-node1 role-
 
 # 5. 将pod调度到指定的node
