--- a/program/02.python/04.深度学习/03.神经网络入门/03神经网络/3.6手写数字识别.md
+++ b/program/02.python/04.深度学习/03.神经网络入门/03神经网络/3.6手写数字识别.md
@@ -30,18 +30,25 @@ print(t_test.shape) # (10000,)
     2. normalize表示是否将输入图像正规化为0.0~1.0的值
     2. flatten表示是否展开输入图像
 
-# PIL、Pillow安装使用方法
-PIL（Python Imaging Library）是Python常用的图像处理库，而Pillow是PIL的一个友好Fork，提供了了广泛的文件格式支持，强大的图像处理能力，主要包括图像储存、图像显示、格式转换以及基本的图像处理操作等。
+3. PIL、Pillow安装使用方法
+    1. PIL（Python Imaging Library）是Python常用的图像处理库，而Pillow是PIL的一个友好Fork，提供了了广泛的文件格式支持，强大的图像处理能力，主要包括图像储存、图像显示、格式转换以及基本的图像处理操作等。
+    2. Pillow的文档：http://pillow.readthedocs.io/en/latest/
+    3. Pillow的github：https://github.com/python-pillow/Pillow
+    4. pip install Pillow
 
-Pillow的文档：http://pillow.readthedocs.io/en/latest/
+# 2. 神经网络的推理处理
 
-Pillow的github：https://github.com/python-pillow/Pillow
+# 3. 批处理
 
-pip install Pillow
+![图3.12矩阵乘法对应维度的元素个数要相同.png](图3.12矩阵乘法对应维度的元素个数要相同.png)
+![图3.26数组形状的变化.png](图3.26数组形状的变化.png)
+![图3.27批处理中数组形状的变化.png](图3.27批处理中数组形状的变化.png)
 
 # 参考
 
 1. https://github.com/oreilly-japan/deep-learning-from-scratch
     1. https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/ch03/mnist_show.py
-2. 深度学习入门.基于Python的理论与实现.斋藤康毅.2018 -> 3.6手写数字识别
+2. 深度学习入门.基于Python的理论与实现.斋藤康毅.2018 
+    1. 3.6手写数字识别
+    2. 3.2激活函数 -> 阶跃函数
 3. [PIL、Pillow安装使用方法](https://www.cnblogs.com/pcat/p/6790058.html)
