--- a/devops/17.nginx/02.ABTestingGateway/03.初试 Netflix 开源持续云交付平台 Spinnaker.md
+++ b/devops/17.nginx/02.ABTestingGateway/03.初试 Netflix 开源持续云交付平台 Spinnaker.md
@@ -9,7 +9,8 @@ Spinnaker 介绍
 配置并安装 Spinnaker
 演示 Spinnaker Pipeline
 演示 Spinnaker 集成 Jenkins
-1、Spinnaker 介绍
+
+# 1、Spinnaker 介绍
 
 Spinnaker 是 Netflix 的开源项目，是一个持续交付平台，它定位于将产品快速且持续的部署到多种云平台上。Spinnaker 通过将发布和各个云平台解耦，来将部署流程流水线化，从而降低平台迁移或多云品台部署应用的复杂度，它本身内部支持 Google、AWS EC2、Microsoft Azure、Kubernetes和 OpenStack 等云平台，并且它可以无缝集成其他持续集成（CI）流程，如 git、Jenkins、Travis CI、Docker registry、cron 调度器等。简而言之，Spinnaker 是致力于提供在多种平台上实现开箱即用的集群管理和部署功能的平台。
 
@@ -55,7 +56,7 @@ Docker: version 17.09.0-ce
 Jenkins: version 2.46.2
 注意：Development 版本安装，需要获取 GitHub 源码编译安装，其中还需要拉取各个组件模块源码，所以需要安装好 Git。JDK8、Redis、Cassandra、Packer 是安装 Spinnaker 组件时需要依赖的。Jenkins 非必须安装，这里我下边需要演示集成 Jenkins，所以使用 Docker 快速安装一下。下边会详细介绍每个组件的作用，以及安装方式。
 
-3、安装 Development Spinnaker
+# 3、安装 Development Spinnaker
 
 安装 Spinnaker 之前，有必要详细描述一下 Spinnaker 架构所依赖的各个组件。
 
