--- a/devops/17.nginx/02.ABTestingGateway/04.云客服产品灰度发布系统的实现.md
+++ b/devops/17.nginx/02.ABTestingGateway/04.云客服产品灰度发布系统的实现.md
@@ -4,15 +4,10 @@
 
 灰度发布（又名金丝雀发布）是指在多版本之间，能够平滑过渡的一种发布方式。比如一个产品或服务迭代更新, 又要保证上线的影响范围，这个时候就需要一个灰度发布系统。这里我们主要介绍云客服产品的灰度发布实现方式。
 
-ÉãÍ¼Íø_400545106_wx (1)wps图片.jpg灰度发布一般分为三部分
-
-1. 灰度部分用户请求至新版本或新服务
-
-2. 测试、运营分析灰度效果
-
-3. 紧急回退 或 全量灰度
-
- 
+1. 灰度发布一般分为三部分
+    1. 灰度部分用户请求至新版本或新服务
+    2. 测试、运营分析灰度效果
+    3. 紧急回退 或 全量灰度
 
 我们将上面三部分从开始灰度到全量或回退或或称或称为灰度期。
 
