--- a/program/02.python/04.深度学习/06.卷积神经网络CNN/6.2卷积层/01.卷积层.md
+++ b/program/02.python/04.深度学习/06.卷积神经网络CNN/6.2卷积层/01.卷积层.md
@@ -47,6 +47,19 @@
     5. 应用大小为(3,3)的滤波器，生成了大小为(4,4)的输出数据
 2. 使用填充后，卷积运算就可以在保持空间大小不变的情况下将数据传给下一层
 
+
+# 4. 步幅stride
+
+![图7-7步幅为2的卷积运算的例子.png](图7-7步幅为2的卷积运算的例子.png)
+![图7-7-1输出大小的运算.png](图7-7-1输出大小的运算.png)
+
+1. 步长
+    1. 设置过滤器移动的步长来调整结果矩阵的大小
+    2. 增大`步幅`后，输出大小会变小
+    3. 增大`填充`后，输出大小会变大
+
+
+
 使用 padding 和不使用 padding 的输出维度
 
 使用 padding=全零填充，SAME，入长/步长，（如果不能整除，向上取整）
@@ -78,12 +91,33 @@ pad_h = max（( o_h -1 ) × s_h + f_h - i_h ， 0）
  pad_left = pad_w / 2 # 注意此处向下取整
  pad_right = pad_w - pad_left
 
-## 4. 步幅stride
+# 5. 三维数据的卷积运算
 
-1. 步长
-    1. 设置过滤器移动的步长来调整结果矩阵的大小
+![图7-8对三维数据进行卷积运算的例子.png](图7-8对三维数据进行卷积运算的例子.png)
+![图7-9对3维数据进行卷积运算的计算顺序.png](图7-9对3维数据进行卷积运算的计算顺序.png)
 
-## 参考
+1. 图像是三维数据
+    1. 图像是三维数据，除了高、长方向之外，还需要处理通道方向
+    2. 通道方向上有多个特征图时，`会按通道进行输入数据和滤波器的卷积运算`，并将结果相加，从而得到输出
+    3. `通道数`只能设定为和输入数据的通道数相同的值
+
+# 6. 多个滤波器的卷积运算
+
+1. ![图7-10.一个滤波器的卷积计算.png](图7-10.一个滤波器的卷积计算.png)
+    1. 输入数据：通道数为 C、高度为H、长度为W的数据的形状可以写成（C, H, W）
+    2. 滤波器：通道数为 C、滤波器高度为 FH（Filter Height）、长度为FW（Filter Width）时，可以写成（C, FH, FW）
+    3. 数据输出：一张特征图
+2. ![图7-11.多个滤波器的卷积运算.png](图7-11.多个滤波器的卷积运算.png)
+    1. 通过应用FN个滤波器，输出特征图也生成了FN个。
+        1. 将这FN个特征图汇集在一起，就得到了形状为(FN, OH, OW)的方块
+    2. 滤波器的权重数据要按(output_channel, input_channel, height, width)的顺序书写。
+        1. 通道数为3、大小为5 × 5的滤波器有20个时，可以写成(20, 3, 5, 5)
+3. ![图7-12.添加偏置项的卷积运算.png](图7-12.添加偏置项的卷积运算.png)
+
+# 7. 批处理
+
+
+# 参考
 
 1. https://www.cnblogs.com/solomonxu/articles/9746777.html
 2. https://github.com/cs231n/cs231n.github.io/blob/master/convolutional-networks.md
@@ -91,5 +125,6 @@ pad_h = max（( o_h -1 ) × s_h + f_h - i_h ， 0）
 4. [【TensorFlow】一文弄懂CNN中的padding参数](https://www.cnblogs.com/White-xzx/p/9497029.html)
 5. 深度学习入门.基于Python的理论与实现.斋藤康毅.2018 
     1. 7.2卷积层
+    2. 7.2.6多个滤波器的卷积运算
 6. Tensorflow+实战Google深度学习框架.郑泽宇.2017
     1. 第6章 图像识别与卷积神经网络CNN
