--- a/devops/17.nginx/02.ABTestingGateway/11.abtest产品.md
+++ b/devops/17.nginx/02.ABTestingGateway/11.abtest产品.md
@@ -6,6 +6,7 @@
 1. http://ab.testin.cn/docs/javaSdk.html
 2. http://www.appadhoc.com/productService.html
 3. http://www.abtester.cn/
+4. 企业级分布式应用服务 EDAS > 灰度发布 https://help.aliyun.com/document_detail/110392.html
 
 # 参考
 
