--- a/program/02.python/04.深度学习/06.卷积神经网络CNN/6.2卷积层/01.卷积层.md
+++ b/program/02.python/04.深度学习/06.卷积神经网络CNN/6.2卷积层/01.卷积层.md
@@ -116,6 +116,12 @@ pad_h = max（( o_h -1 ) × s_h + f_h - i_h ， 0）
 
 # 7. 批处理
 
+![图7-13.卷积运算的处理流.png](图7-13.卷积运算的处理流.png)
+
+1. 批处理
+    1. 在各层间传递的数据保存为4维数据
+    2. 按(batch_num, channel, height, width)的顺序保存数据
+    3. 批处理将N次的处理汇总成了1次进行
 
 # 参考
 
